# Perq

backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start.py
backend/alembic/: env.py
backend/alembic/versions/: 20260509_0001_initial_schema.py  20260509_0002_add_reward_rates.py  20260509_0003_add_reward_rate_metadata.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: benefits.py  cards.py  health.py  issuers.py
backend/app/core/: config.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  benefit.py  credit_card.py  issuer.py  reward_category.py  reward_rate.py  signup_offer.py
backend/app/schemas/: benefit.py  card.py  issuer.py  reward_category.py  reward_rate.py  signup_offer.py
backend/app/services/: benefit_service.py  card_service.py  issuer_service.py
backend/app/utils/: slug.py
backend/data/: banks.csv  benefits.csv  card_categories.csv  categories.csv  credit_cards.csv  reward_rates.csv  signup_offers.csv
backend/tests/: test_cards_seed_and_detail.py  test_health.py
frontend/: .env.example  .gitignore  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/cards/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/insights/: layout.tsx  page.tsx
frontend/components/cards/: card-detail-view.tsx  (+1 more)
frontend/lib/: backend-api.ts  catalog-transform.test.ts  catalog-transform.ts  perq-data.ts
(+16 files in other folders)
