[project]
name = "perq-backend"
version = "0.1.0"
description = "FastAPI backend for Perq."
requires-python = ">=3.12"
dependencies = [
  "alembic==1.15.2",
  "fastapi==0.115.12",
  "psycopg[binary]==3.2.7",
  "pydantic==2.11.4",
  "pydantic-settings==2.9.1",
  "python-dotenv==1.1.0",
  "sqlalchemy==2.0.40",
  "uvicorn[standard]==0.34.2",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest==8.3.5",
]

[tool.uv]
package = false
